--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "reduxaxiosjwt",
+  "name": "redux-axios-jwt",
   "version": "1.0.0",
   "description": "Boilerplate for REST apis.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\""
   },
   "author": "",
   "license": "ISC",
